[gd_scene load_steps=3 format=3 uid="uid://b4guh667l4mex"]

[ext_resource type="Script" uid="uid://cqwwhjwatkghf" path="res://scenes/Nodes/outputfile.gd" id="1_ah4r5"]
[ext_resource type="PackedScene" uid="uid://csapiqka522fh" path="res://scenes/Nodes/audioplayer.tscn" id="2_pq06c"]

[node name="outputfile" type="GraphNode"]
offset_left = 523.0
offset_top = 6.0
offset_right = 959.0
offset_bottom = 555.0
tooltip_text = "Handles everything to do with audio output. "
title = "Output File"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 0.564706)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color(1, 1, 1, 1)
slot/6/left_icon = null
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color(1, 1, 1, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
slot/7/left_enabled = false
slot/7/left_type = 0
slot/7/left_color = Color(1, 1, 1, 1)
slot/7/left_icon = null
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color(1, 1, 1, 1)
slot/7/right_icon = null
slot/7/draw_stylebox = true
slot/8/left_enabled = false
slot/8/left_type = 0
slot/8/left_color = Color(1, 1, 1, 1)
slot/8/left_icon = null
slot/8/right_enabled = false
slot/8/right_type = 0
slot/8/right_color = Color(1, 1, 1, 1)
slot/8/right_icon = null
slot/8/draw_stylebox = true
slot/9/left_enabled = false
slot/9/left_type = 0
slot/9/left_color = Color(1, 1, 1, 1)
slot/9/left_icon = null
slot/9/right_enabled = false
slot/9/right_type = 0
slot/9/right_color = Color(1, 1, 1, 1)
slot/9/right_icon = null
slot/9/draw_stylebox = true
slot/10/left_enabled = false
slot/10/left_type = 0
slot/10/left_color = Color(1, 1, 1, 1)
slot/10/left_icon = null
slot/10/right_enabled = false
slot/10/right_type = 0
slot/10/right_color = Color(1, 1, 1, 1)
slot/10/right_icon = null
slot/10/draw_stylebox = true
slot/11/left_enabled = false
slot/11/left_type = 0
slot/11/left_color = Color(1, 1, 1, 1)
slot/11/left_icon = null
slot/11/right_enabled = false
slot/11/right_type = 0
slot/11/right_color = Color(1, 1, 1, 1)
slot/11/right_icon = null
slot/11/draw_stylebox = true
slot/12/left_enabled = false
slot/12/left_type = 0
slot/12/left_color = Color(1, 1, 1, 1)
slot/12/left_icon = null
slot/12/right_enabled = false
slot/12/right_type = 0
slot/12/right_color = Color(1, 1, 1, 1)
slot/12/right_icon = null
slot/12/draw_stylebox = true
slot/13/left_enabled = false
slot/13/left_type = 0
slot/13/left_color = Color(1, 1, 1, 1)
slot/13/left_icon = null
slot/13/right_enabled = false
slot/13/right_type = 0
slot/13/right_color = Color(1, 1, 1, 1)
slot/13/right_icon = null
slot/13/draw_stylebox = true
script = ExtResource("1_ah4r5")
metadata/command = "outputfile"
metadata/utility = true
metadata/input = false

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "File Name:"

[node name="MarginContainer5" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 2

[node name="FileNameField" type="LineEdit" parent="." groups=["outputnode"]]
layout_mode = 2
tooltip_text = "Your output file name, cannot contain special characters"
metadata/outputfunction = "filename"

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="RunProcess" type="Button" parent="." groups=["outputnode"]]
custom_minimum_size = Vector2(0, 43)
layout_mode = 2
tooltip_text = "Runs the CDP commands in the thread."
text = "Run Thread"
metadata/outputfunction = "runprocess"

[node name="DeleteIntermediateFilesToggle" type="CheckButton" parent="." groups=["outputnode"]]
custom_minimum_size = Vector2(0, 43)
layout_mode = 2
tooltip_text = "SoundThread makes a lot of files. When toggled on this deletes everything but the output file."
text = "Delete Intermediate Files"
expand_icon = true
metadata/outputfunction = "deleteintermediate"

[node name="ReuseFolderToggle" type="CheckButton" parent="." groups=["outputnode"]]
custom_minimum_size = Vector2(0, 43)
layout_mode = 2
tooltip_text = "Stops you from being prompted for new folder each time you run a thread."
text = "Reuse Last Output Folder"
expand_icon = true
metadata/outputfunction = "reusefolder"

[node name="OutputFolderMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 9

[node name="OutputFolderLabel" type="Label" parent="OutputFolderMargin"]
layout_mode = 2
size_flags_horizontal = 3
clip_text = true
text_overrun_behavior = 3

[node name="OpenOutputFolder" type="Button" parent="." groups=["outputnode"]]
custom_minimum_size = Vector2(0, 43)
layout_mode = 2
tooltip_text = "Opens the folder on your computer where the output file is saved."
text = "Open Folder"
metadata/outputfunction = "openfolder"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rendered Output File:"

[node name="Autoplay" type="CheckButton" parent="HBoxContainer" groups=["outputnode"]]
layout_mode = 2
text = "Autoplay"

[node name="MarginContainer4" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 2

[node name="AudioPlayer" parent="." groups=["outputnode"] instance=ExtResource("2_pq06c")]
layout_mode = 2
size_flags_horizontal = 4
metadata/outputfunction = "audioplayer"

[connection signal="focus_exited" from="FileNameField" to="." method="_on_file_name_field_focus_exited"]
[connection signal="text_submitted" from="FileNameField" to="." method="_on_file_name_field_text_submitted"]
[connection signal="toggled" from="DeleteIntermediateFilesToggle" to="." method="_on_delete_intermediate_files_toggle_toggled"]
[connection signal="toggled" from="ReuseFolderToggle" to="." method="_on_reuse_folder_toggle_toggled"]
[connection signal="toggled" from="HBoxContainer/Autoplay" to="." method="_on_autoplay_toggled"]
